# NERD_JOURNAL_

./: README.md  app.config.ts  app.json  eas.json  eslint.config.js  jest.config.js  jest.setup.ts  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  brain.tsx  settings.tsx
app/(tabs)/: _layout.tsx  index.tsx  two.tsx
app/note/: [id].tsx
components/: AuthGuard.tsx
constants/: AIEngine.ts  CloudSyncEngine.ts  Colors.ts  CryptoEngine.ts  SecureStorage.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lan_sync.rs  lib.rs
src/ai/: AiContext.tsx  aiService.ts  askNotes.ts  enrichNote.ts  geminiService.ts  providerCascade.ts  rateLimiter.ts  sanitize.ts  transcribeAudio.ts
src/attachments/: pickFile.ts  pickImage.ts
src/components/: AiAssistant.tsx  AskModal.tsx  AttachmentList.tsx  AuthGuard.tsx  DesktopPanel.tsx  LanSyncScanner.native.tsx  LanSyncScanner.tsx  LinkInput.tsx  NerdLogo.tsx  NoteCard.tsx  NoteEditor.tsx  PrivacyConsentDialog.tsx  Sparkline.tsx  StatsStrip.tsx  SyncOnboarding.tsx  VoiceRecorder.tsx
src/crypto/: VaultContext.tsx  cipher.ts  encoding.ts  kdf.ts  random.ts  secureSecrets.ts  vaultService.ts  vaultStorage.ts
src/db/: testDb.ts  types.ts
src/design/: index.ts  tokens.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: id.ts  logger.ts  polyfills.ts  result.ts  urlValidation.ts
src/notes/: Note.ts  NotesContext.tsx  NotesRepository.ts  noteSearch.ts  notesStore.ts
src/platform/: detect.ts
src/stats/: dailyPrompt.ts  noteStats.ts
src/sync/: SyncBundle.ts  SyncContext.tsx  syncRepository.ts
(+55 files in other folders)
