[package]
name        = "nerd-journal"
version     = "0.1.0"
edition     = "2021"
description = "NERD_JOURNAL_ — zero-knowledge encrypted personal journal"
authors     = []

[lib]
name       = "nerd_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-tray   = "2"
keyring             = { version = "3", features = [] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
