[package]
name        = "nerd-journal"
version     = "0.1.0"
edition     = "2021"
description = "NERD_JOURNAL_ — zero-knowledge encrypted personal journal"
authors     = []

[lib]
name       = "nerd_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
keyring             = { version = "3", features = [] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
axum                = { version = "0.7", features = ["json"] }
tokio               = { version = "1", features = ["net", "time"] }
local-ip-address    = "0.6"
rand                = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
